ajout de la fonctionnalite dashboard qui affiche toutes les informations de l'administrateur
