# routes/api.php
@@ -8,6 +8,7 @@ use App\Http\Controllers\CompteController;
 use App\Http\Controllers\AuthController;
 use App\Http\Controllers\TransactionController;
 use App\Http\Controllers\AdminTransactionController;
+use App\Http\Controllers\AdminDashboardController;
 use App\Models\User;
 
 /*
@@ -31,6 +32,7 @@ Route::middleware(['auth.api_cookie'])->group(function () {
             Route::apiResource('comptes', CompteController::class)->only(['index', 'show']);
             Route::patch('/comptes/{id}', [CompteController::class, 'update']);
             Route::middleware(['App\Http\Middleware\IsAdmin'])->group(function () {
+                Route::get('/admin/dashboard', [AdminDashboardController::class, 'dashboard']);
                 Route::post('/comptes/{id}/bloquer', [CompteController::class, 'block']);
                 Route::post('/comptes/{id}/debloquer', [CompteController::class, 'unblock']);
                 Route::get('/admin/comptes/{id}/transactions', [TransactionController::class, 'showByCompte']);
